# ragas

./: .gitignore  CUSTOM_METRICS_README.md  README.md  custom_metrics.py  generate_test_set.py  hello.py  pyproject.toml  ragas_scores_custom.csv  requirements.txt  run_evals.py  run_pipeline.py  test_custom_metrics.py
code/: paths.py  ragas_evals.py
code/metrics/: coherence.py  conciseness.py  generate_test_set.py  references_jaccard.py  utils.py
data/: golden_dataset.json  golden_dataset_with_references.csv  golden_dataset_with_references_complete_evaluation_results.csv  golden_dataset_with_references_evaluation_results.csv  ragas_dataset.csv  ragas_scores.csv  test_set.csv
src/: generate_test_set.py  tags_jaccard.py  utils.py
