[project]
name = "ragas-pub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=3.6.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.25",
    "ragas>=0.2.15",
    "rapidfuzz>=3.13.0",
    "scikit-learn>=1.7.0",
]
